@@ -14,6 +14,8 @@
 
 package org.trellisldp.client;
 
+import static java.net.http.HttpRequest.BodyPublishers.noBody;
+import static java.net.http.HttpResponse.BodyHandlers.ofFile;
 import static java.time.Instant.ofEpochMilli;
 import static java.time.ZoneOffset.UTC;
 import static java.time.format.DateTimeFormatter.RFC_1123_DATE_TIME;
@@ -25,13 +27,12 @@ import static javax.ws.rs.core.HttpHeaders.AUTHORIZATION;
 import static javax.ws.rs.core.HttpHeaders.CONTENT_TYPE;
 import static javax.ws.rs.core.HttpHeaders.ETAG;
 import static javax.ws.rs.core.HttpHeaders.LINK;
-import static jdk.incubator.http.HttpClient.Version.HTTP_2;
-import static jdk.incubator.http.HttpRequest.BodyPublisher.fromInputStream;
-import static jdk.incubator.http.HttpRequest.BodyPublisher.fromString;
-import static jdk.incubator.http.HttpRequest.BodyPublisher.noBody;
-import static jdk.incubator.http.HttpResponse.BodyHandler.asByteArray;
-import static jdk.incubator.http.HttpResponse.BodyHandler.asFile;
-import static jdk.incubator.http.HttpResponse.BodyHandler.asString;
+import static java.net.http.HttpClient.Version.HTTP_2;
+import static java.net.http.HttpRequest.BodyPublishers.ofInputStream;
+import static java.net.http.HttpRequest.BodyPublishers.ofString;
+import static java.net.http.HttpResponse.BodyHandlers.ofString;
+import static java.net.http.HttpResponse.BodyHandlers.discarding;
+import static java.net.http.HttpResponse.BodyHandlers.ofByteArray;
 import static org.apache.jena.arq.riot.WebContent.contentTypeJSONLD;
 import static org.apache.jena.arq.riot.WebContent.contentTypeNTriples;
 import static org.apache.jena.arq.riot.WebContent.contentTypeSPARQLUpdate;
@@ -54,9 +55,9 @@ import java.util.stream.Collectors;
 
 import javax.net.ssl.SSLContext;
 
-import jdk.incubator.http.HttpClient;
-import jdk.incubator.http.HttpRequest;
-import jdk.incubator.http.HttpResponse;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 import org.apache.commons.rdf.api.IRI;
 import org.slf4j.Logger;
@@ -145,7 +146,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).method("HEAD", noBody()).build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " HEAD request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -162,7 +163,7 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString());
             final String[] headers = new String[]{ACCEPT, contentTypeJSONLD};
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -179,7 +180,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -196,7 +197,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).GET().build();
-            return client.send(req, asString());
+            return client.send(req, ofString());
         } catch (Exception ex) {
             throw new LdpClientException(ex.toString(), ex.getCause());
         }
@@ -208,7 +209,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(ACCEPT, contentType).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -227,7 +228,7 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString());
             final String datetime = RFC_1123_DATE_TIME.withZone(UTC).format(ofEpochMilli(Long.parseLong(timestamp)));
             final HttpRequest req = HttpRequest.newBuilder(uri).headers("Accept-Datetime", datetime).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -243,7 +244,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString() + "?ext=timemap");
             final HttpRequest req = HttpRequest.newBuilder(uri).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -261,7 +262,7 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString() + "?ext=timemap");
             final String[] headers = new String[]{ACCEPT, contentTypeJSONLD + "; " + "profile=\"" + profile + "\""};
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}",
                     identifier.getIRIString() + "?ext=timemap", String.valueOf(response.statusCode()));
@@ -280,7 +281,7 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString() + "?version=" + timestamp);
             final String[] headers = new String[]{ACCEPT, contentTypeJSONLD + "; " + "profile=\"" + profile + "\""};
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}",
                     identifier.getIRIString() + "?version=" + timestamp, String.valueOf(response.statusCode()));
@@ -297,7 +298,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).GET().build();
-            final HttpResponse<Path> response = client.send(req, asFile(file));
+            final HttpResponse<Path> response = client.send(req, ofFile(file));
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -313,7 +314,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).GET().build();
-            final HttpResponse<byte[]> response = client.send(req, asByteArray());
+            final HttpResponse<byte[]> response = client.send(req, ofByteArray());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -331,7 +332,7 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers("Want-Digest", algorithm).method("HEAD",
                     noBody()).build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -350,7 +351,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString() + "?version=" + timestamp);
             final HttpRequest req = HttpRequest.newBuilder(uri).GET().build();
-            final HttpResponse<Path> response = client.send(req, asFile(file));
+            final HttpResponse<Path> response = client.send(req, ofFile(file));
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}",
                     identifier + "?version=" + timestamp, String.valueOf(response.statusCode()));
@@ -366,7 +367,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString() + "?version=" + timestamp);
             final HttpRequest req = HttpRequest.newBuilder(uri).GET().build();
-            final HttpResponse<byte[]> response = client.send(req, asByteArray());
+            final HttpResponse<byte[]> response = client.send(req, ofByteArray());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}",
                     identifier.getIRIString() + "?version=" + timestamp, String.valueOf(response.statusCode()));
@@ -383,7 +384,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers("Range", byterange).GET().build();
-            final HttpResponse<byte[]> response = client.send(req, asByteArray());
+            final HttpResponse<byte[]> response = client.send(req, ofByteArray());
             log.info(String.valueOf(response.version()) + " GET request to {} returned {}", identifier.getIRIString(),
                     String.valueOf(response.statusCode()));
             return response.body();
@@ -398,7 +399,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers("Prefer", prefer).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -417,7 +418,7 @@ public class LdpClientImpl implements LdpClient {
             final String[] headers = new String[]{"Prefer",
                     "return=representation; include=\"" + LDP.PreferMinimalContainer.getIRIString() + "\""};
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -435,7 +436,7 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString());
             final String[] headers = new String[]{ACCEPT, contentTypeJSONLD + "; " + "profile=\"" + profile + "\""};
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -455,7 +456,7 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString() + q);
             final String[] headers = new String[]{ACCEPT, contentTypeJSONLD + "; profile=\"" + profile + "\""};
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -474,7 +475,7 @@ public class LdpClientImpl implements LdpClient {
             final String q = buildLDFQuery(subject, predicate, object);
             final URI uri = new URI(identifier.getIRIString() + q);
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(ACCEPT, contentTypeJSONLD).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier + q,
                     String.valueOf(response.statusCode()));
@@ -492,7 +493,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString() + "?ext=acl");
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(ACCEPT, contentType).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(String.valueOf(response.version()) + " GET request to {} returned {}", identifier + "?ext=acl",
                     String.valueOf(response.statusCode()));
             log.debug("Response Body: " + response.body());
@@ -510,7 +511,7 @@ public class LdpClientImpl implements LdpClient {
             final String[] headers = new String[]{"Origin", origin.getIRIString(), "Access-Control-Request-Method",
                     "PUT", "Access-Control-Request-Headers", "Content-Type, Link"};
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -528,7 +529,7 @@ public class LdpClientImpl implements LdpClient {
             final String[] headers = new String[]{"Origin", origin.getIRIString(), "Access-Control-Request-Method",
                     "POST", "Access-Control-Request-Headers", "Accept"};
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -545,7 +546,7 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString());
             final String[] entries = buildHeaderEntryList(metadata);
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(entries).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -564,7 +565,7 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString());
             final String[] entries = buildHeaderEntryList(metadata);
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(entries).GET().build();
-            final HttpResponse<byte[]> response = client.send(req, asByteArray());
+            final HttpResponse<byte[]> response = client.send(req, ofByteArray());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -582,7 +583,7 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString());
             final String[] entries = buildHeaderEntryList(metadata);
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(entries).GET().build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " GET request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -601,7 +602,7 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).method("OPTIONS", noBody()).build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " OPTIONS request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -618,8 +619,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(CONTENT_TYPE, contentType).POST(
-                    fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info("New Resource Location {}", String.valueOf(response.headers().map().get("Location")));
             log.info(
                     String.valueOf(response.version()) + " POST request to {} returned {}", identifier,
@@ -637,8 +638,8 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString());
             final String[] entries = buildHeaderEntryList(metadata);
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(entries).POST(
-                    fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info("New Resource Location {}", String.valueOf(response.headers().map().get("Location")));
             log.info(
                     String.valueOf(response.version()) + " POST request to {} returned {}", identifier,
@@ -656,8 +657,8 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString());
             final String[] headers = new String[]{CONTENT_TYPE, contentType, AUTHORIZATION, authorization};
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).POST(
-                    fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info("New Resource Location {}", String.valueOf(response.headers().map().get("Location")));
             log.info(String.valueOf(response.version()) + " AUTHORIZED POST request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -673,8 +674,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(CONTENT_TYPE, contentType, "Slug", slug).POST(
-                    fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info("New Resource Location {}", String.valueOf(response.headers().map().get("Location")));
             log.info(
                     String.valueOf(response.version()) + " POST request to {} returned {}", identifier,
@@ -691,8 +692,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(
-                    CONTENT_TYPE, contentType, "Digest", digest).POST(fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    CONTENT_TYPE, contentType, "Digest", digest).POST(ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info("New Resource Location {}", String.valueOf(response.headers().map().get("Location")));
             log.info(
                     String.valueOf(response.version()) + " POST request to {} returned {}", identifier,
@@ -708,8 +709,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final String[] headers = new String[]{LINK, LDP.BasicContainer + "; rel=\"type\""};
-            final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).PUT(fromString("")).build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).PUT(ofString("")).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(String.valueOf(response.version()) + " PUT create LDP-BC request to {} returned {}", uri,
                     String.valueOf(response.statusCode()));
         } catch (Exception ex) {
@@ -728,8 +729,8 @@ public class LdpClientImpl implements LdpClient {
             final String entity =
                     "<> " + LDP.hasMemberRelation + " " + DC.isPartOf + " ;\n" + LDP.membershipResource + " "
                             + membershipObj;
-            final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).POST(fromString(entity)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).POST(ofString(entity)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(String.valueOf(response.version()) + " POST create LDP-DC request to {} returned {}", uri,
                     String.valueOf(response.statusCode()));
         } catch (Exception ex) {
@@ -748,8 +749,8 @@ public class LdpClientImpl implements LdpClient {
             final String entity =
                     "<> " + LDP.hasMemberRelation + " " + DC.isPartOf + " ;\n" + LDP.membershipResource + " "
                             + membershipObj;
-            final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).POST(fromString(entity)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpRequest req = HttpRequest.newBuilder(uri).headers(headers).POST(ofString(entity)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(String.valueOf(response.version()) + " AUTHORIZED POST create LDP-DC request to {} returned {}",
                     uri, String.valueOf(response.statusCode()));
         } catch (Exception ex) {
@@ -764,8 +765,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(CONTENT_TYPE, contentType).PUT(
-                    fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " PUT request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -781,8 +782,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(CONTENT_TYPE, contentType).PUT(
-                    fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " PUT request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -800,8 +801,8 @@ public class LdpClientImpl implements LdpClient {
             final URI uri = new URI(identifier.getIRIString());
             final String[] entries = buildHeaderEntryList(metadata);
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(entries).PUT(
-                    fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " PUT request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -817,8 +818,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(CONTENT_TYPE, contentType, AUTHORIZATION,
-                    authorization).PUT(fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    authorization).PUT(ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(String.valueOf(response.version()) + " AUTHORIZED PUT request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
         } catch (Exception ex) {
@@ -833,8 +834,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(CONTENT_TYPE, contentType, ETAG, etag).PUT(
-                    fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(String.valueOf(response.version()) + " PUT request with matching Etag {} to {} returned {}", etag,
                     identifier, String.valueOf(response.statusCode()));
         } catch (Exception ex) {
@@ -849,8 +850,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(
-                    CONTENT_TYPE, contentType, "Digest", digest).PUT(fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    CONTENT_TYPE, contentType, "Digest", digest).PUT(ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " PUT request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -866,8 +867,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(CONTENT_TYPE, contentType,
-                    "If-Unmodified-Since", time).PUT(fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    "If-Unmodified-Since", time).PUT(ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " PUT request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -881,8 +882,8 @@ public class LdpClientImpl implements LdpClient {
         try {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
-            final HttpRequest req = HttpRequest.newBuilder(uri).DELETE(noBody()).build();
-            final HttpResponse<String> response = client.send(req, asString());
+            final HttpRequest req = HttpRequest.newBuilder(uri).DELETE().build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " DELETE request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -897,8 +898,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).header(CONTENT_TYPE, contentTypeSPARQLUpdate).method(
-                    "PATCH", fromInputStream(() -> stream)).build();
-            final HttpResponse<String> response = client.send(req, asString());
+                    "PATCH", ofInputStream(() -> stream)).build();
+            final HttpResponse<String> response = client.send(req, ofString());
             log.info(
                     String.valueOf(response.version()) + " PATCH request to {} returned {}", identifier,
                     String.valueOf(response.statusCode()));
@@ -913,8 +914,8 @@ public class LdpClientImpl implements LdpClient {
             requireNonNull(identifier, NON_NULL_IDENTIFIER);
             final URI uri = new URI(identifier.getIRIString());
             final HttpRequest req = HttpRequest.newBuilder(uri).headers(CONTENT_TYPE, contentTypeNTriples).PUT(
-                    fromInputStream(() -> stream)).build();
-            final CompletableFuture<HttpResponse<String>> response = client.sendAsync(req, asString());
+                    ofInputStream(() -> stream)).build();
+            final CompletableFuture<HttpResponse<String>> response = client.sendAsync(req, ofString());
             final Integer code = response.get().statusCode();
             return code == 204 || code == 201;
 
@@ -924,26 +925,10 @@ public class LdpClientImpl implements LdpClient {
     }
 
     @Override
-    public Map<HttpRequest, CompletableFuture<HttpResponse<String>>> multiSubscriberAsyncGet(final IRI identifier)
-            throws LdpClientException {
-        try {
-            requireNonNull(identifier, NON_NULL_IDENTIFIER);
-            final URI uri = new URI(identifier.getIRIString());
-            final HttpRequest request = HttpRequest.newBuilder(uri).headers(
-                    CONTENT_TYPE, contentTypeNTriples).GET().build();
-            return client.sendAsync(
-                    request, HttpResponse.MultiSubscriber.asMap(
-                            (req) -> Optional.of(HttpResponse.BodyHandler.asString()))).join();
-        } catch (Exception ex) {
-            throw new LdpClientException(ex.toString(), ex.getCause());
-        }
-    }
-
-    @Override
     public void joiningCompletableFuturePut(final Map<URI, InputStream> bodies, final String contentType) {
         CompletableFuture.allOf(bodies.entrySet().stream().map(k -> client.sendAsync(
                 HttpRequest.newBuilder(k.getKey()).headers(CONTENT_TYPE, contentType).PUT(
-                        fromInputStream(k::getValue)).build(), asString()).thenApply(HttpResponse::statusCode)).toArray(
+                        ofInputStream(k::getValue)).build(), ofString()).thenApply(HttpResponse::statusCode)).toArray(
                 CompletableFuture<?>[]::new)).join();
     }
 }
