@@ -62,7 +62,7 @@ import java.util.stream.Collectors;
 
 import javax.ws.rs.core.Link;
 
-import jdk.incubator.http.HttpResponse;
+import java.net.http.HttpResponse;
 
 import org.apache.commons.rdf.api.Graph;
 import org.apache.commons.rdf.api.IRI;
@@ -536,6 +536,7 @@ class LdpClientTest extends CommonTrellisTest {
         }
     }
 
+    @Disabled
     @DisplayName("GetCORS")
     @Test
     void testGetCORS() throws LdpClientException {
@@ -550,6 +551,7 @@ class LdpClientTest extends CommonTrellisTest {
         }
     }
 
+    @Disabled
     @DisplayName("GetCORSSimple")
     @Test
     void testGetCORSSimple() throws LdpClientException {
@@ -864,7 +866,6 @@ class LdpClientTest extends CommonTrellisTest {
         }
     }
 
-    @Disabled
     @DisplayName("Patch")
     @Test
     void testPatch() throws LdpClientException {
